agc_clock.sdk/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:03:57 **** Incremental Build of configuration Debug for project HelloWorld ****
make pre-build main-build 
a9-linaro-pre-build-step
 
make: Nothing to be done for 'main-build'.
15:04:34 **** Auto Build of configuration Debug for project HelloWorld ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/helloworld.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../HelloWorld_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
../src/helloworld.c: In function 'main':
../src/helloworld.c:56:11: error: 'true' undeclared (first use in this function)
     while(true) {
           ^~~~
../src/helloworld.c:56:11: note: each undeclared identifier is reported only once for each function it appears in
src/subdir.mk:24: recipe for target 'src/helloworld.o' failed
make: *** [src/helloworld.o] Error 1
15:04:46 **** Auto Build of configuration Debug for project HelloWorld ****
make pre-build main-build 
a9-linaro-pre-build-step
 
Building file: ../src/helloworld.c
Invoking: ARM v7 gcc compiler
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../HelloWorld_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
Finished building: ../src/helloworld.c
 
Building target: HelloWorld.elf
Invoking: ARM v7 gcc linker
arm-none-eabi-gcc -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -Wl,-build-id=none -specs=Xilinx.spec -Wl,-T -Wl,../src/lscript.ld -L../../HelloWorld_bsp/ps7_cortexa9_0/lib -o "HelloWorld.elf"  ./src/helloworld.o ./src/platform.o   -Wl,--start-group,-lxil,-lgcc,-lc,--end-group
Finished building target: HelloWorld.elf
 
Invoking: ARM v7 Print Size
arm-none-eabi-size HelloWorld.elf  |tee "HelloWorld.elf.size"
   text	   data	    bss	    dec	    hex	filename
  19048	   1144	  22568	  42760	   a708	HelloWorld.elf
Finished building: HelloWorld.elf.size
 
15:05:48 **** Auto Build of configuration Debug for project HelloWorld ****
make pre-build main-build 
a9-linaro-pre-build-step
 
make: Nothing to be done for 'main-build'.
